--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="description-content">
                 <div class="description-details">
                     <p class="description-desc">
-                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"
+                        "The future belongs to the young; their creativity and innovation will transform Bangladesh into a prosperous nation.Poverty is not created by the poor; it is created by the systems we build. Change the system, and we change the future."
                     </p>
                     <h2 class="description-title">Dr. Muhammad Yunus</h2>
                     <p class="another-desc">Chief Adviser of the People's Republic of Bangladesh</p>
@@ -69,15 +69,15 @@
                         <div class="opinion-table-content">
                             <div class="future-tables">
                                 <table class="opinion-table">
-                                    <thead>
-                                        <th>Questions</th>
-                                        <th>Select your Opition</th>
-                                    </thead>
-                                    <tbody>
+                 <thead>
+                           <th>Questions</th>
+                                  <th>Select your Opition</th>
+                             </thead>
+                              <tbody>
                                         <tr>
-                                        <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
-                                        <td>
-                                            <select>
+                                      <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                                    <td>
+                                             <select>
                                             <option value="agree">Yes, I Agree</option>
                                             <option value="disagree">No, I Disagree</option>
                                             <option value="neutral">Neutral</option>
@@ -162,7 +162,7 @@
 
     <section class="donate-section">
         <div class="donate-content">
-            <h2 class="donate-title">Recent News</h2>
+            <h2 class="donate-title">Donate Today</h2>
             <p class="donate-desc">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
 
             <div class="donate-boxes">
